--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@ a:hover { background:#1a4af0; }
 <body>
 
 <h1>🌍 Remote Jobs Hub</h1>
-<p>Click a job → Pay → Receive password → Unlock full details</p>
+<h1>🌍 Remote Jobs Hub</h1>
+
+<p style="text-align:center; font-size:16px; color:#333; margin-bottom:20px;">
+  <strong>Welcome to Remote Jobs Hub – Your gateway to earning online! 🚀</strong><br>
+  Browse hundreds of remote opportunities, from easy microtasks to high-paying skilled jobs.<br>
+  Click a job, pay the small unlocking fee, get your password, and start earning today!
+</p>
 
 <div class="jobs" id="jobs"></div>
 
@@ -234,4 +240,5 @@ function checkPassword(){
 </script>
 
 </body>
+
 </html>
